Start using Drawing Pane component in MainApp (some features will have to be re-implemented)